--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
     <title>CS:GO Map Pool</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-database-compat.js"></script>
 </head>
 <body>
     <header>
@@ -18,7 +14,7 @@
             <nav>
                 <a href="index.html" class="active">Главная</a>
                 <a href="admin/index.html" id="admin-link">Панель управления</a>
-                <button id="auth-btn" class="auth-btn">Войти</button>
+                <span id="user-status">Гость</span>
             </nav>
         </div>
     </header>
@@ -31,9 +27,6 @@
 
         <div id="maps-container" class="maps-grid">
             <!-- Карты будут загружены через JavaScript -->
-            <div class="loading">
-                <i class="fas fa-spinner fa-spin"></i> Загрузка карт...
-            </div>
         </div>
     </main>
 
@@ -44,27 +37,6 @@
         </div>
     </footer>
 
-    <!-- Модальное окно для входа -->
-    <div id="login-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <h2>Вход в систему</h2>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Пароль:</label>
-                    <input type="password" id="password" required>
-                </div>
-                <button type="submit" class="btn">Войти</button>
-            </form>
-            <p id="login-error" class="error-message"></p>
-        </div>
-    </div>
-
-    <script src="js/firebase-config.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
